--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
 <app-head></app-head>
 <app-big-card></app-big-card>
+<app-small-card-left
+title="Aproveite na TV."
+description="Assista em Smart TVs, PlayStation,
+Xbox, Chromecast, Apple TV,
+ aparelhos de Blu-ray e outros 
+  dispositivos."
+  imagem="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png"
+></app-small-card-left>
+
+
+<app-small-card-rigth></app-small-card-rigth>
+
+
+<app-small-card-left
+title="Crie perfis para crianças."
+description="Deixe as crianças se aventurarem com seus personagens favoritos em um espaço feito só para elas, sem pagar a mais por isso."
+imagem="https://occ-0-420-1380.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABWGB3YOpSh2wA7OOZQYD-MkalQ0oJEy-YEEpoPKAIenLtZf5lKeERDdKj-u6WnZx9wx_QuiDVHkGM_1QmVQt9yxM7mKjevBNHKFz.png?r=1b8"
+></app-small-card-left>
 <router-outlet></router-outlet>
