--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,11 @@ Xbox, Chromecast, Apple TV,
 ></app-small-card-left>
 
 
-<app-small-card-rigth></app-small-card-rigth>
+<app-small-card-rigth
+title="Assista quando quiser."
+description="Assista no celular, tablet, Smart TV ou notebook sem pagar a mais por isso."
+imagem="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile.png"
+></app-small-card-rigth>
 
 
 <app-small-card-left
@@ -18,4 +22,14 @@ title="Crie perfis para crianças."
 description="Deixe as crianças se aventurarem com seus personagens favoritos em um espaço feito só para elas, sem pagar a mais por isso."
 imagem="https://occ-0-420-1380.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABWGB3YOpSh2wA7OOZQYD-MkalQ0oJEy-YEEpoPKAIenLtZf5lKeERDdKj-u6WnZx9wx_QuiDVHkGM_1QmVQt9yxM7mKjevBNHKFz.png?r=1b8"
 ></app-small-card-left>
+
+<app-small-card-rigth
+title="Baixe séries para assistir offline."
+description="Disponível em todos os planos, exceto no Básico com anúncios."
+imagem="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
+></app-small-card-rigth>
+
+<app-card-perguntas></app-card-perguntas>
+
+<app-card-rodape></app-card-rodape>
 <router-outlet></router-outlet>
