--- a/src/app/components/small-card-rigth/small-card-rigth.component.html
+++ b/src/app/components/small-card-rigth/small-card-rigth.component.html
@@ -2,14 +2,11 @@
 <div class="container">
     <div class="flex">
         <div class="card__img">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile.png" alt="">
+            <img src="{{imagem}}" alt="">
         </div>
         <div class="card__title">
-            <h1>Assista quando quiser.</h1>
-            <h2>Assista no celular, tablet, Smart TV <br>
-                 ou notebook sem pagar a mais por <br>
-                  isso.
-            </h2>
+            <h1>{{title}}</h1>
+            <h2>{{description}}</h2>
         </div>
     </div>
 </div>
