--- a/src/app/components/card-perguntas/card-perguntas.component.html
+++ b/src/app/components/card-perguntas/card-perguntas.component.html
@@ -38,13 +38,15 @@
             </li>
         </ul>
 
-
-        <h2>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</h2>
+        <div class="box">
+           <h2>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</h2>
 
         <div class="buscar"><input type="text" placeholder="Email"> <button class="vamosla">
             Vamos lá
             <i class="bi bi-chevron-compact-right"></i>
-         </button></div>
+         </button></div>   
+        </div>
+    
     </div>
 </div>
 
