--- a/src/app/components/card-rodape/card-rodape.component.html
+++ b/src/app/components/card-rodape/card-rodape.component.html
@@ -1,1 +1,41 @@
 
+
+<div class="flex">
+
+    <div class="">
+        <ul>
+            <li>Perguntas frequentes </li>
+            <li>Relações com investidores</li>
+            <li>Formas de assistir</li>
+            <li>Informações corporativas </li>
+            <li>Só na Netflix</li>
+        </ul>
+    </div>
+
+    <div class="">
+        <ul>
+            <li>Central de Ajuda</li>
+            <li>Carreiras</li>
+            <li>Termos de Uso</li>
+            <li>Entre em contato</li>
+        </ul>
+    </div>
+
+    <div class="">
+        <ul>
+            <li>Conta</li>
+            <li>Resgatar cartão pré-pago</li>
+            <li>Privacidade</li>
+            <li>Teste de velocidade</li>
+        </ul>
+    </div>
+
+    <div class="">
+        <ul>
+            <li>Media Center</li>
+            <li>Comprar cartão pré-pago</li>
+            <li>Preferências de cookies</li>
+            <li>Avisos legais</li>
+        </ul>
+    </div>
+</div>
